# GravityBench-V2

./: .env.example  .gitattributes  .gitignore  README.md  config.json  environment.yml  error_log.txt  noise_config.py  pyproject.toml  quick_start.py  requirements.txt
GBv2_tests/: GBv2.env  GBv2_helper.py  conftest.py  parity_config.json  pytest.ini  test_geometry_accuracy.py  test_integration.py  test_parity.py  test_properties.py  test_properties_with_simulations.py
agents/: tabular_agent.py
analysis/: fig_casestudy.py  plot_100_obs_human_performance.py  scenarios_requiring_mass.txt  table1_scores.py  table2_massassumption.py
generalscenarios/: Binary.py
huggingface/: prepare_dataset.py  prepare_hf_repo.py  validation.jsonl
outputs/: chat_histories.csv  combine_results.py  expert_baseline_results.csv
outputs_range_of_N/: aggregate.py  aggregated_results.csv  fig_maxvelocity.py  fig_maxvelocity_and_periastron.py  fig_periastron.py  plot_model_comparison.py
scenarios/: K+U.py  angle_of_inclination.py  apoastron.py  area_swept_over_time_apo.py  area_swept_over_time_peri.py  argument_of_periapsis.py  avg_distance_COM_star1.py  avg_distance_COM_star2.py  eccentricity.py  is_bound.py  kepler_3rd_law.py  linear_drag.py  longitude_of_ascending_node.py  mass_largest_star.py  mass_ratio.py  mass_star1.py  mass_star2.py  max_acceleration_star1.py  max_acceleration_star2.py  max_angular_velocity_star1.py  max_angular_velocity_star2.py  max_momentum_star1.py  max_momentum_star2.py  max_velocity_star1.py  max_velocity_star2.py  min_acceleration_star1.py  periastron.py  (+26 more)
(+67 files in other folders)
